--- a/Blog.Admin/Assets/css/matrix-style.css
+++ b/Blog.Admin/Assets/css/matrix-style.css
@@ -96,28 +96,43 @@ hr {
 }
 /*Custom UI*/
 /*Table*/
-.col-actions{
-        width:120px;
-    }
-.col-ident-id{
-    width:30px;
+.col-actions-1 {
+    width: 75px;
+    text-align: center;
 }
-.col-datetime{
-    width:125px;
+.col-actions-2 {
+    width: 120px;
+    text-align: center;
 }
-.col-date{
-    width:100px;
+.col-ident-id {
+    width: 30px;
+    text-align: center;
 }
-.col-bit{
-    width:80px;
+
+.col-datetime {
+    width: 125px;
+    text-align: center;
 }
-.text-right{
+
+.col-date {
+    width: 100px;
     text-align: right;
 }
-.text-left{
+
+.col-bit {
+    width: 80px;
+    text-align: center;
+}
+
+.text-right {
+    text-align: right;
+}
+
+.text-left {
     text-align: left;
 }
-.text-center{
+
+.text-center {
     text-align: center;
 }
 /*End Table*/
@@ -202,16 +217,17 @@ hr {
         color: white;
         font-size: 8px;
     }
-      #header b {
+
+    #header b {
         position: relative;
         top: -45px;
         left: 80px;
         color: white;
         font-size: 12px;
         white-space: normal;
-        overflow:hidden;
-        text-overflow:ellipsis;
-        width:50px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        width: 50px;
     }
 
     #header h1 {
@@ -2011,7 +2027,7 @@ form {
         background: #49CCED;
     }
 
-     #header img, #header span, #header p, #header b {
+    #header img, #header span, #header p, #header b {
         display: none;
     }
 
